# testudo

./: .env.databricks.example  .env.drive.example  .env.ollama.example  .env.testudo.example  .gitignore  .pre-commit-config.yaml  .pre-commit-verify  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  NEXT_ACTIONS.md  README.md  STATUS.md  pyproject.toml  testudo.spec
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPOSE-SMOKE-TEST.md  GOOGLE_DRIVE_SETUP.md  INDEX.md  OLLAMA_SETUP.md  PACKAGING.md  POSITIONING.md  ROADMAP.md  naming.md
docs/compliance/: FedRAMP-readiness.md  GDPR-data-flow.md  ISO27001-Annex-A-mapping.md  SOC2-control-mapping.md
electron/: .gitignore  README.md  electron.vite.config.ts  main.js  package-lock.json  package.json  preload.js  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
electron/renderer/: index.html
electron/src/main/: bridge.ts  index.ts
electron/src/preload/: index.d.ts  index.ts
electron/src/renderer/: index.html
electron/src/renderer/src/: App.tsx  env.d.ts  main.tsx
electron/src/renderer/src/components/: Chat.tsx  ComposePanel.tsx  DatabasePanel.tsx  FilePanel.tsx  ModeTabs.tsx  ResultLog.tsx  Sidebar.tsx  UrlPanel.tsx  WorkflowGraph.tsx  WorkflowPanel.tsx
electron/src/renderer/src/lib/: api.ts  modes.ts
examples/: workflow-databricks-query.json  workflow-db-query.json  workflow-meeting-debrief.json  workflow-pdf-debrief.json  workflow-pdf-summarise.json  workflow-url-fetch.json
examples/data/: README.md  demo.duckdb  sample.md  seed_demo.py  transcript.md
examples/prompts/: meeting_debrief.xml
examples/readmes/: databricks-query-v015.md  db-query-v015.md  meeting-debrief-v01.md  pdf-debrief-v01.md  pdf-debrief-v015.md  pdf-summarise-v015.md  url-fetch-v015.md
src/testudo/: __init__.py  _loaded.py  cli.py
src/testudo/audit/: __init__.py  events.py  log.py
src/testudo/connectors/: __init__.py  drive.py  extract.py  https.py  local.py  result.py  tools.py
src/testudo/data/: __init__.py  databricks_adapter.py  duckdb_adapter.py  result.py  tools.py
src/testudo/mcp_servers/: __init__.py  base.py  file_extractor.py  file_writer.py  llm_response_capturer.py
src/testudo/models/: __init__.py  ollama.py  tools.py
src/testudo/orchestrator/: __init__.py  __main__.py  context.py  executor.py  loader.py  registry.py  tools.py  workflow.py
src/testudo/outputs/: __init__.py  chat.py  dashboard.py  file.py  ticket.py  tools.py
src/testudo/permissions/: __init__.py  enforce.py  loader.py  model.py  scan.py
src/testudo/prompts/: __init__.py  library.py  template.py
src/testudo/runtime/: __init__.py  docker.py  isolation.py  runner.py
src/testudo/sanitisers/: __init__.py  agent_scanner.py  injection.py  output.py  patterns.py  pii.py  result.py  threat.py  tools.py  unicode_payload.py
src/testudo/server/: __init__.py  app.py  auth.py  models.py  rate_limit.py
tests/: __init__.py  conftest.py  test_audit.py  test_cli.py  test_connectors_drive.py  test_connectors_extract.py  test_connectors_https.py  test_connectors_local.py  test_data_databricks.py  test_data_duckdb.py  test_docker.py  test_executor.py  test_isolation.py  test_loader.py  test_mcp_servers.py  test_models_ollama.py  test_outputs.py  test_permissions.py  test_permissions_scan.py  test_prompts.py  test_registry.py  test_runner.py  test_sanitisers_agent_scanner.py  test_sanitisers_injection.py  test_sanitisers_output.py  test_sanitisers_patterns.py  test_sanitisers_pii.py  test_sanitisers_threat.py  test_sanitisers_unicode_payload.py  test_server.py  test_server_compose.py  test_server_env_check.py  test_server_input_defaults.py  test_server_rate_limit.py  test_workflow.py  test_workflows_examples.py
tests/fixtures/databricks/: README.md  create_tables.sql  sample_employees.csv  sample_transactions.csv  sample_workflow_databricks.json
tests/fixtures/drive/: README.md  sample_customers.csv  sample_log.txt  sample_report.md
tests/fixtures/google_drive/: README.md  sample_employees.csv  sample_report.md  sample_transactions.tsv  sample_workflow_drive.json
tests/integration/: __init__.py  test_end_to_end.py
