[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testudo"
version = "0.1.6"
description = "Dockerised agent runtime with declarative permissioning, audit logging, rollback semantics, and an embedded lightweight orchestrator."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Julen Gamboa" },
]
keywords = [
    "agent",
    "agentic",
    "container",
    "docker",
    "sandbox",
    "isolation",
    "llm",
    "tool-use",
    "orchestration",
    "rag",
    "hillstar",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.7",
    "mypy>=1.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]
sanitisers = [
    "spacy>=3.7",
    "presidio-analyzer>=2.2",
]
databricks = [
    "databricks-sql-connector>=3.0",
]
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]
file_ops = [
    "pypdf>=4.0",
    "python-docx>=1.1",
]
dist = [
    "pyinstaller>=6.0",
]

[project.scripts]
testudo = "testudo.cli:main"

[project.urls]
Homepage = "https://github.com/evoclock/testudo"
Issues = "https://github.com/evoclock/testudo/issues"
Documentation = "https://github.com/evoclock/testudo#readme"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=testudo --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "docker: requires a working Docker daemon on the host (auto-skipped without)",
]

[tool.coverage.run]
source = ["src/testudo"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

# Optional-extra modules (file_ops, databricks) and untyped third-party libs.
# CI installs only `.[dev]` so these are not present at type-check time;
# their imports are guarded at the call sites with try/except blocks.
[[tool.mypy.overrides]]
module = [
    "pypdf",
    "pypdf.*",
    "docx",
    "docx.*",
    "databricks",
    "databricks.*",
    "yaml",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/testudo"]
